tests/test0262.exp
Parse error, unexpected end of program ( tests/test0262.ctr: 4 )
