tests/test0262.ctr
'SINGLE_LANGUAGE'.
☞ neverEndingString := 'Never Ending

